--- a/ColorPicker/Settings/Styles.xaml
+++ b/ColorPicker/Settings/Styles.xaml
@@ -7,7 +7,7 @@
 
     <!--  Window border  -->
     <Style x:Key="WindowBorderStyle" TargetType="{x:Type Border}">
-        <Setter Property="BorderBrush" Value="{DynamicResource WindowBorder}" />
+        <Setter Property="BorderBrush" Value="{StaticResource WindowBorder}" />
         <Setter Property="BorderThickness" Value="2,1,2,2" />
         <Style.Triggers>
             <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=WindowState}" Value="Maximized">
@@ -18,7 +18,7 @@
 
     <!--  Window Titlebar Buttons  -->
     <Style x:Key="TitleBarButtonStyle" TargetType="Button">
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryText}" />
+        <Setter Property="Foreground" Value="{StaticResource PrimaryText}" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
         <Setter Property="IsTabStop" Value="False" />
@@ -41,10 +41,10 @@
 
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="true">
-                            <Setter TargetName="border" Property="Background" Value="{DynamicResource TitleBarButtonHover}" />
+                            <Setter TargetName="border" Property="Background" Value="{StaticResource TitleBarButtonHover}" />
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
-                            <Setter TargetName="border" Property="Background" Value="{DynamicResource TitleBarButtonHover}" />
+                            <Setter TargetName="border" Property="Background" Value="{StaticResource TitleBarButtonHover}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -54,7 +54,7 @@
 
     <!--  Window Titlebar Button Close  -->
     <Style x:Key="TitleBarCloseButtonStyle" TargetType="Button">
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryText}" />
+        <Setter Property="Foreground" Value="{StaticResource PrimaryText}" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
         <Setter Property="IsTabStop" Value="False" />
@@ -77,10 +77,10 @@
 
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="true">
-                            <Setter TargetName="border" Property="Background" Value="{DynamicResource TitleBarButtonCloseHover}" />
+                            <Setter TargetName="border" Property="Background" Value="{StaticResource TitleBarButtonCloseHover}" />
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
-                            <Setter TargetName="border" Property="Background" Value="{DynamicResource TitleBarButtonCloseHover}" />
+                            <Setter TargetName="border" Property="Background" Value="{StaticResource TitleBarButtonCloseHover}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -130,8 +130,8 @@
 
     <!--  ContextMenu Style  -->
     <Style x:Key="ContextMenuStyle" TargetType="ContextMenu">
-        <Setter Property="Background" Value="{DynamicResource WindowBackground}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource Border}" />
+        <Setter Property="Background" Value="{StaticResource WindowBackground}" />
+        <Setter Property="BorderBrush" Value="{StaticResource Border}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Padding" Value="4" />
         <Setter Property="Width" Value="80" />
@@ -154,7 +154,7 @@
     <!--  MenuItem Style  -->
     <Style x:Key="MenuItemStyle" TargetType="MenuItem">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryText}" />
+        <Setter Property="Foreground" Value="{StaticResource PrimaryText}" />
         <Setter Property="Height" Value="30" />
         <Setter Property="Padding" Value="2" />
         <Setter Property="Template">
@@ -178,7 +178,7 @@
                                 VerticalAlignment="Center"
                                 FontSize="15"
                                 FontWeight="Bold"
-                                Foreground="{DynamicResource PrimaryText}"
+                                Foreground="{StaticResource PrimaryText}"
                                 Text="✓"
                                 Visibility="{Binding IsChecked, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource BoolToVisibilityConverter}}" />
 
@@ -192,10 +192,10 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsHighlighted" Value="True">
-                            <Setter TargetName="Border" Property="Background" Value="{DynamicResource TitleBarButtonHover}" />
+                            <Setter TargetName="Border" Property="Background" Value="{StaticResource TitleBarButtonHover}" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
-                            <Setter Property="Foreground" Value="{DynamicResource OnTopDisabled}" />
+                            <Setter Property="Foreground" Value="{StaticResource OnTopDisabled}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
