--- a/ColorPicker/Components/WindowTitleBar.xaml
+++ b/ColorPicker/Components/WindowTitleBar.xaml
@@ -34,7 +34,6 @@
             Foreground="{StaticResource PrimaryText}"
             Text="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Title}" />
 
-
         <Button
             x:Name="DebugButton"
             Grid.Column="2"
@@ -42,6 +41,7 @@
             Height="32"
             HorizontalAlignment="Left"
             Click="DebugButton_Click"
+            Focusable="False"
             RenderOptions.EdgeMode="Aliased"
             Style="{StaticResource TitleBarButtonStyle}"
             Visibility="Collapsed">
@@ -53,13 +53,13 @@
                 Icon="Bug" />
         </Button>
 
-
         <Button
             x:Name="SettingsButton"
             Grid.Column="3"
             Width="46"
             Height="32"
             Click="SettingsButton_Click"
+            Focusable="False"
             RenderOptions.EdgeMode="Aliased"
             Style="{StaticResource TitleBarButtonStyle}">
             <Button.ToolTip>
@@ -74,14 +74,13 @@
                 Icon="sliders" />
         </Button>
 
-
-
         <Button
             x:Name="OnTopButton"
             Grid.Column="4"
             Width="46"
             Height="32"
             Click="OnTopButton_Click"
+            Focusable="False"
             RenderOptions.EdgeMode="Aliased"
             Style="{StaticResource TitleBarButtonStyle}">
             <Button.ToolTip>
@@ -96,11 +95,10 @@
                 Icon="ThumbTack" />
         </Button>
 
-
-
         <Button
             Grid.Column="5"
             Click="OnMinimizeButton_Click"
+            Focusable="False"
             RenderOptions.EdgeMode="Aliased"
             Style="{StaticResource TitleBarButtonStyle}">
             <Path
@@ -118,6 +116,7 @@
         <Button
             Grid.Column="6"
             Click="OnCloseButton_Click"
+            Focusable="False"
             Style="{StaticResource TitleBarCloseButtonStyle}">
             <Path
                 Width="46"
