add global hotkey settings and improve settings UI

--- a/ColorPicker/Components/ColorPicker.xaml
+++ b/ColorPicker/Components/ColorPicker.xaml
@@ -8,6 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:ColorPicker.Models"
     xmlns:settings="clr-namespace:ColorPicker.Settings"
+    FontFamily="Consolas"
     mc:Ignorable="d">
 
     <Grid
