--- a/ColorPicker/Settings/Colors.xaml
+++ b/ColorPicker/Settings/Colors.xaml
@@ -1,13 +1,19 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <SolidColorBrush x:Key="PrimaryText" Color="#f7fbfe" />
-    <SolidColorBrush x:Key="WindowBackground" Color="#272727" />
     <SolidColorBrush x:Key="WindowBorder" Color="#272727" />
+    <SolidColorBrush x:Key="WindowBackground" Color="#272727" />
+    <SolidColorBrush x:Key="PrimaryText" Color="#f7fbfe" />
     <SolidColorBrush x:Key="Border" Color="#434343" />
-    <SolidColorBrush x:Key="OnTopDisabled" Color="#787878" />
+
     <SolidColorBrush x:Key="TitleBarBackground" Color="#272727" />
     <SolidColorBrush x:Key="TitleBarButtonHover" Color="#434343" />
     <SolidColorBrush x:Key="TitleBarButtonCloseHover" Color="#e81123" />
-    <SolidColorBrush x:Key="SettingsBackground" Color="#F2F2F2" />
+    <SolidColorBrush x:Key="OnTopDisabled" Color="#787878" />
+
+    <!--  Settings Window  -->
+    <SolidColorBrush x:Key="SettingsWindowBackground" Color="#272727" />
+    <SolidColorBrush x:Key="SettingsBackground" Color="#323232" />
+    <SolidColorBrush x:Key="HotkeyBorder" Color="#434343" />
+    <SolidColorBrush x:Key="DisableBackground" Color="#A1A3A4" />
 
 </ResourceDictionary>
