--- a/ColorPicker/MainWindow.xaml
+++ b/ColorPicker/MainWindow.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:ColorPicker"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="ColorGrab"
+    Title="ColorPick"
     Width="450"
     Height="250"
     MinWidth="400"
@@ -40,10 +40,7 @@
                 Visibility="Visible" />
 
             <!--  Settings  -->
-            <components:Settings
-                x:Name="SettingsWindow"
-                Grid.Row="1"
-                Visibility="Collapsed" />
+            <ContentPresenter x:Name="Settings" Grid.Row="1" />
 
         </Grid>
     </Border>
