--- a/ColorPicker/Windows/WelcomeWindow.xaml
+++ b/ColorPicker/Windows/WelcomeWindow.xaml
@@ -10,10 +10,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="ColorPick"
     Width="640"
-    Height="470"
+    Height="480"
     AllowsTransparency="True"
-    Background="{StaticResource SettingsWindowBackground}"
+    Background="{StaticResource SettingsBackground}"
     FontFamily="Consolas"
+    FontSize="13"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterOwner"
     WindowState="Normal"
@@ -83,32 +84,45 @@
                 </Grid.RowDefinitions>
 
                 <!--  H1  -->
-                <Grid Grid.Row="0" Margin="20,16,0,8">
+                <Grid Grid.Row="0" Margin="30,16,30,25">
                     <TextBlock
                         HorizontalAlignment="Left"
-                        FontSize="16"
+                        VerticalAlignment="Center"
+                        FontSize="18"
                         FontWeight="bold"
                         Foreground="{StaticResource PrimaryText}"
-                        Text="Getting Started" />
+                        Text="Overview" />
+                    <TextBlock
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Bottom"
+                        Foreground="{StaticResource PrimaryText}"
+                        Text="{x:Static config:Config.VersionNumber}" />
                 </Grid>
 
+                <Separator
+                    Grid.Row="0"
+                    Height="1"
+                    Margin="30,22,30,0"
+                    Background="{StaticResource Border}" />
+
                 <!--  Image  -->
-                <Grid Grid.Row="1">
+                <Grid Grid.Row="1" Margin="0,-20,0,0">
+
                     <Image
                         Width="510"
                         Height="310"
                         Margin="0,0,0,15"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
-                        Panel.ZIndex="0"
-                        Source="/Assets/kör.png" />
+                        Panel.ZIndex="1"
+                        Source="/Assets/WelcomePic.png" />
 
                     <!--  Lines and text  -->
-                    <Grid Panel.ZIndex="1" IsHitTestVisible="False">
+                    <Grid Panel.ZIndex="2" IsHitTestVisible="False">
 
                         <!--  Settings  -->
                         <TextBlock
-                            Margin="293,33,278,315"
+                            Margin="290,33,278,315"
                             Foreground="{StaticResource PrimaryText}"
                             Text="Settings" />
                         <Rectangle
@@ -125,7 +139,7 @@
                         <TextBlock
                             Margin="448,33,14,309"
                             Foreground="{StaticResource PrimaryText}"
-                            Text="Keep this window ontop" />
+                            Text="Window ontop" />
                         <Rectangle
                             Width="24"
                             Height="1"
@@ -138,7 +152,7 @@
 
                         <!--  Format  -->
                         <TextBlock
-                            Margin="158,33,373,316"
+                            Margin="151,33,373,316"
                             Foreground="{StaticResource PrimaryText}"
                             Text="Format options" />
                         <Rectangle
@@ -153,7 +167,7 @@
 
                         <!--  Zoom  -->
                         <TextBlock
-                            Margin="64,61,526,284"
+                            Margin="61,61,526,284"
                             Foreground="{StaticResource PrimaryText}"
                             Text="Zoom" />
                         <Rectangle
@@ -168,7 +182,7 @@
 
                         <!--  Slider  -->
                         <TextBlock
-                            Margin="44,301,499,45"
+                            Margin="38,301,499,45"
                             Foreground="{StaticResource PrimaryText}"
                             Text="Adjust zoom" />
                         <Rectangle
@@ -213,34 +227,59 @@
                     </Grid>
                 </Grid>
 
+                <Separator
+                    Grid.Row="1"
+                    Height="1"
+                    Margin="30,300,30,0"
+                    Background="{StaticResource Border}" />
 
-                <Grid Grid.Row="2" Margin="0,-20,0,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="60" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="60" />
-                    </Grid.ColumnDefinitions>
 
-                    <Button
-                        Grid.Column="1"
-                        Width="120"
-                        Height="30"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Click="Ok_Click"
-                        Content="Got it!"
-                        Cursor="Hand"
-                        IsCancel="True" />
+                <Button
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Width="220"
+                    Height="32"
+                    Margin="0,-8,0,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Click="Ok_Click"
+                    Content="Continue"
+                    Cursor="Hand"
+                    FontSize="14"
+                    FontWeight="SemiBold"
+                    IsCancel="True">
 
-                    <TextBlock
-                        Grid.Column="2"
-                        Margin="0,0,20,0"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        FontWeight="Bold"
-                        Foreground="{StaticResource PrimaryText}"
-                        Text="{x:Static config:Config.VersionNumber}" />
-                </Grid>
+                    <Button.Style>
+                        <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="Button">
+                            <Setter Property="Background" Value="{StaticResource LogoBlue}" />
+                            <Setter Property="Foreground" Value="{StaticResource PrimaryText}" />
+
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="Button">
+                                        <Border Background="{TemplateBinding Background}" CornerRadius="4">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="{StaticResource LogoGreen}" />
+                                </Trigger>
+
+                                <Trigger Property="IsPressed" Value="True">
+                                    <Setter Property="Background" Value="Transparent" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+
+
+
+
 
 
             </Grid>
