--- a/ColorPicker/App.xaml
+++ b/ColorPicker/App.xaml
@@ -2,20 +2,20 @@
     x:Class="ColorPicker.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:ColorPicker.Converters"
     xmlns:local="clr-namespace:ColorPicker"
-    xmlns:svc="clr-namespace:ColorPicker.Services"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     StartupUri="MainWindow.xaml">
-    
+
     <Application.Resources>
         <ResourceDictionary>
-            
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Settings/Colors.xaml" />
                 <ResourceDictionary Source="Settings/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <svc:EnumToBoolConverter x:Key="EnumToBoolConverter" />
+            <converters:EnumToBoolConverter x:Key="EnumToBoolConverter" />
+            <converters:BoolToCursorConverter x:Key="BoolToCursorConverter" />
             <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter" />
 
         </ResourceDictionary>
