--- a/ColorPicker/Components/Settings.xaml
+++ b/ColorPicker/Components/Settings.xaml
@@ -136,6 +136,7 @@
             </Grid>
 
             <!--  Github  -->
+            <!-- 
             <StackPanel
                 Grid.Row="5"
                 Margin="10,2,0,10"
@@ -156,6 +157,7 @@
                     IsReadOnly="True"
                     Text="{x:Static config:Config.GithubLink}" />
             </StackPanel>
+            TODO -->
 
             <!--  Button  -->
             <StackPanel
