--- a/ColorPicker/Settings/Colors.xaml
+++ b/ColorPicker/Settings/Colors.xaml
@@ -1,17 +1,17 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <SolidColorBrush x:Key="WindowBorder" Color="#161616" />
-    <SolidColorBrush x:Key="WindowBackground" Color="#161616" />
+    <SolidColorBrush x:Key="WindowBorder" Color="#242424" />
+    <SolidColorBrush x:Key="WindowBackground" Color="#242424" />
     <SolidColorBrush x:Key="PrimaryText" Color="#f7fbfe" />
     <SolidColorBrush x:Key="Border" Color="#434343" />
-    <SolidColorBrush x:Key="TitleBarBackground" Color="#161616" />
+    <SolidColorBrush x:Key="TitleBarBackground" Color="#242424" />
     <SolidColorBrush x:Key="TitleBarButtonHover" Color="#434343" />
     <SolidColorBrush x:Key="TitleBarButtonCloseHover" Color="#e81123" />
     <SolidColorBrush x:Key="OnTopDisabled" Color="#787878" />
 
     <!--  Settings Window  -->
-    <SolidColorBrush x:Key="SettingsWindowBackground" Color="#161616" />
-    <SolidColorBrush x:Key="SettingsBackground" Color="#262626" />
+    <SolidColorBrush x:Key="SettingsWindowBackground" Color="#242424" />
+    <SolidColorBrush x:Key="SettingsBackground" Color="#2e2e2e" />
     <SolidColorBrush x:Key="HotkeyBorder" Color="#434343" />
     <SolidColorBrush x:Key="DisableBackground" Color="#A1A3A4" />
 
