--- a/ColorPicker/MainWindow.xaml
+++ b/ColorPicker/MainWindow.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:ColorPicker"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="ColorPick"
+    Title="ColorGrab"
     Width="450"
     Height="250"
     MinWidth="400"
